add refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,5 @@ aws.dynamodb.tableName=minimemo
 aws.region=us-east-1
 
 rapid.api.key=e5d55f2ebdmsh1fdc26168bba541p18415cjsne46c1d57a3f9
-
-spring.security.user.name=admin
-spring.security.user.password=admin
+security.jwt.token.expiration=3600000
+jwt.refreshTokenExpiration=43800
