--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=5000
 aws.lambda.scrapper.host=https://jdz642xpki.execute-api.us-east-1.amazonaws.com
 aws.credentials.accessKey=AKIA2TH2A2A5GINAPYND
 aws.credentials.secretKey=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
-aws.dynamodb.tableName=minimemo
+aws.dynamodb.tableName=minimemo2
 aws.region=us-east-1
 
 rapid.api.key=e5d55f2ebdmsh1fdc26168bba541p18415cjsne46c1d57a3f9
