add increment + couple of fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=5000
 
 aws.lambda.scrapper.host=https://jdz642xpki.execute-api.us-east-1.amazonaws.com
+#aws.lambda.scrapper.host= https://hbjvg054vi.execute-api.us-east-1.amazonaws.com/dev
 aws.credentials.accessKey=AKIA2TH2A2A5GINAPYND
 aws.credentials.secretKey=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
 aws.dynamodb.tableName=minimemo2
